<resources>
    <string name="app_name">Intercrosse Timer</string>
    <string name="help_title">manual:</string>
    <string name="help_text1">In the status bar</string>
    <string name="help_text2">Turn on and off the functionallity of the volume rocker, vibration, switch time (5 or 30 seconds)</string>
    <string name="help_text4">Tapping the play or stop icon starts and STOPS the timer.</string>
    <string name="help_text5">The 1 / 2 / 5 minute icon starts the corresponding timer immediately.</string>
    <string name="help_text6">Pressing the volume down button restarts the timer immediately.</string>
    <string name="help_text7">Pressing the volume up button pauses or restarts the timer.</string>
    <string name="titel_5sec">5 Seconds</string>
    <string name="titel_30sec">30 Seconds</string>
    <string name="understood">understood</string>
    <string name="help_text3">Tapping the number starts and  pauses the timer.</string>
    <string name="vibrationOn">Vibration is enabled.</string>
    <string name="volumeRockerOff">The volume rocker function is disabled.</string>
    <string name="number_thirty" translatable="false">30</string>
    <string name="number_point_zero" translatable="false">.0</string>
    <string name="volumeRockerOn">The volume rocker function is enabled.</string>
    <string name="vibrationOff">Vibration is disabled.</string>
</resources>