<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/backgroundAccent"
        android:orientation="vertical"
        android:padding="20dip">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/help_title"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="50sp">
            </TextView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/help_text1"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/help_text2"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/help_text3"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/help_text4"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/help_text5"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/help_text6"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/help_text7"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="20sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/closePopupBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/understood">
            </Button>

        </LinearLayout>

    </LinearLayout>




</ScrollView>